 * 12Jun2019 Guards the definition of SaveMessage and ProcessMessage only under MPI3
 * 11Jun2019 Fixes bug in MPI_Wait where the input request is not copied for later processing
 * 25Apr2019 Fixes race conditions between thread creations and PEBS samples 
 * 17Apr2019 Fixes bug in pebs sampling store misses identification
 * 03Jun2019 Increases static buffer for `calloc` to 8MB
 * 02Apr2019 Adds support for changing num_threads in OpenMP parallel constructs
 * 29Mar2019 Changes order in which MPI env vars are checked to discover process' task id during auto init
 * 28Mar2019 Extends support for PEBS sampling on Skylake processors, xml 'period' attribute changed to 'frequency'
 + 27Mar2019 Adds missing user_lock routines in kmp runtime
 * 27Mar2019 Removes warnings for ambiguous `if` and non-std99 compliant `for`
 * 27Mar2019 Fixes incorrect states for MPI_Win_flush_* calls
 * 27Mar2019 Breaks infinite loop in signal handler (closes #19)
 * 26Mar2019 Installs Python modules only if their support is enabled by `configure`
 * 26Mar2019 Fixes bug in configure mis-detecting libiberty even if it is not available (closes #7)
 - 26Mar2019 Reverts partial support for nested OpenMP in Intel KMPC runtime
 + 26Mar2019 Adds instrumentation support for Mprobe, Improbe, Mrecv, Imrecv 
 * 26Mar2019 Reverts commit 1a215e849f to stop using dladdr to translate UF from dynamic libraries
 * 25Mar2019 Fixes missing worksharings in GNU and Intel OpenMP
 + 25Mar2019 Adds pyextrae.pthreads module
 * 25Mar2019 Fixes timestamp of rusage and memusage events
 + 25Mar2019 Adds functions in pyextrae to toggle the profiler on/off 
 * 25Mar2019 Fixes compatibility issue with cudaStreamLegacy available since CUDA 7
 * 25Mar2019 Fixes bug in initialization of OmpSs tracing (only master thread was detected)
 * 24Jan2019 Always use POSIX clock except if it is disabled setting the EXTRAE_USE_POSIX_CLOCK environment variable to 0
 * 19Sep2018 Fixes bug in variable declaration in 'free' wrapper